# laarid_package_android-libnativehelper

./: .gitignore  .travis.yml  Android.mk  AsynchronousCloseMonitor.cpp  JNIHelp.cpp  JniConstants.cpp  JniInvocation.cpp  Makefile.am  android-nativehelper-0.0.pc.in  configure.ac  gtest.mk  toStringArray.cpp
debian/: README  README.source  changelog  control  copyright  libandroid-nativehelper0-dev.dirs  libandroid-nativehelper0.symbols  watch
include/nativehelper/: AsynchronousCloseMonitor.h  JNIHelp.h  JniConstants.h  JniInvocation.h  ScopedBytes.h  ScopedFd.h  ScopedLocalFrame.h  ScopedLocalRef.h  ScopedPrimitiveArray.h  ScopedStringChars.h  ScopedUtfChars.h  UniquePtr.h  toStringArray.h
tests/: Android.mk  JniInvocation_test.cpp
